--- a/VRChat/46/1092046.html
+++ b/VRChat/46/1092046.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "DKho8MUsGkwBZN3Ys5ciSgRfZho7fcAsxWnxvB9QlsU="></script>
+    "j2AecmkgtiwzJwHui3Qfa9wUQkUllVaZSASwle4ciU4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け3Dアバター】もずバグ　byもずくん","description":"もずくんの　もずバグ\n作った人　もずくん　@mozukuumauma\n　（Twitterで報告もらえると超嬉しいです）\n2018-11-14　投稿\n\n■事前準備してほしいもの\n　VRCSDK\n\n■内容物\n　本体　－　FBXファイル　テクスチャ\n　Unitypackage\n　　パッケージ内\n　　　マテリアル5個\n　　　まんまるシェーダー1.2適応済　　　　作者様　@Mini_9321_VR\n　　　アニメーションオーバーライド5種\n　　　上記設定済Prefab同梱済　これを使ってね\n　　　\n■特徴\n　△9546\n　Lip Sync15種\n　表情5種　（頭上に記号が出ます）\n　手と足にトレイルレンダラーが仕込まれていてダンス等できれいに映えます\n　　おすすめの商品を宣伝です　初心者向けのトレイルレンダラーです\n　　作者も使ってます\n　　https://booth.pm/ja/items/1057062\n※※※※超大事な事※※※※\n【フルボディトラッキング対応してます　逆にフルトラ推奨モデルです】\n　通常VRとデスクトップだと肩のボーンが動き始めて肩がズルズル動くんですもう私諦めます！\n\n■キャラ紹介\n作者がゲーム内で使ってたキャラをイメージしたモデルです\nもずバグって名前は呼ばれ方であってちゃんとした個体識別名ではないので\nみなさん好きに名前をつけてあげて下さい\n\n基本VRchat前提で構成しています。\nバーチャルキャスト等の他のVRコンテンツでの利用も問題ありません\nVRM形式への変換は自分でお願いします\n\n以下テンプレ\n著作表示　○　（著作ってより、もずくんの使ったよって報告が欲しいだけです）\n商用利用　○　（フルスクラッチだよ！）\n収益　○　（収益化された配信にもどんどん使ってくれ）\n色変えや改変　○　（どんどんやっていいの作って）\nパーツ流用　○　（購入者は好きにバラして改変して使っていけ）\n再配布　×　（VRCアバターペデスタルも不可）\nR18-18G　○　（どう使うねん）\n政治や宗教要素　×　（攻撃的な要素には使ってほしくない）\n取材や雑誌掲載TV等に映るの　○　（知らぬ間にって場合もあるので気にしないでいいのよ）\nアバター利用でのVtuber活動　○　（逆にする人居るなら呼んでほしいレベル）\nわからんことあったらTwitterでリプくれ\nアバターアップロードとかの方向性の質問は知らん　それは管轄外だ","url":"https://booth.pm/ja/items/1092046","offers":{"priceCurrency":"JPY","@type":"Offer","price":"800"},"image":"https://booth.pximg.net/c/620x620/e2c0f6c5-5ba0-4d14-8298-1e93a6e970f3/i/1092046/da3ae1bc-e1e4-4332-8fb7-87b1385b89a6_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="DKho8MUsGkwBZN3Ys5ciSgRfZho7fcAsxWnxvB9QlsU="></script>
+    nonce="j2AecmkgtiwzJwHui3Qfa9wUQkUllVaZSASwle4ciU4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -610,7 +610,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
